--- a/src/main/resources/templates/index.jade
+++ b/src/main/resources/templates/index.jade
@@ -1,9 +1,23 @@
 extends layout
 
+block scripts
+    script(src="/js/index.js")
+
 block content
     h1 Haloo Consulting - Ohturef
 
     a.btn.add-btn(href="/new") Add new reference
+
+    input#search(type="text" placeholder="Search")
+
+    h2 Filter by tags
+    section#tags
+        if empty(tags)
+            p No tags
+        else
+            button.btn.inline-btn.tag(data-tag='') All tags
+            each tag in tags
+                button.btn.inline-btn.tag(data-tag="#{tag.name}") #{tag.name}
 
     h2 Book references
     section#book-references
@@ -21,7 +35,7 @@ block content
                     th Pages
                     th
                 each line in references["book"]
-                    tr
+                    tr.ref-row(data-search="#{line.id} #{line.author} #{line.title} #{line.year} #{line.publisher} #{line.address} #{line.pages}" data-tags="#{reftags[line.id]}")
                         td= line.id
                         td= line.author
                         td: a(href="/ref/#{line.id}") #{line.title}
@@ -30,6 +44,7 @@ block content
                         td= line.address
                         td= line.pages
                         td: button.btn.inline-btn(onclick='deleteReference("#{line.id}")') Delete
+        p.no-search-results.hidden No references matching search criteria.
 
     h2 Article references
     section#article-references
@@ -50,7 +65,7 @@ block content
                     th Address
                     th
                 each line in references["article"]
-                    tr
+                    tr.ref-row(data-search="#{line.id} #{line.author} #{line.title} #{line.journal} #{line.volume} #{line.number} #{line.year} #{line.pages} #{line.publisher} #{line.address}" data-tags="#{reftags[line.id]}")
                         td= line.id
                         td= line.author
                         td: a(href="/ref/#{line.id}") #{line.title}
@@ -62,6 +77,7 @@ block content
                         td= line.publisher
                         td= line.address
                         td: button.btn.inline-btn(onclick='deleteReference("#{line.id}")') Delete
+        p.no-search-results.hidden No references matching search criteria.
 
     h2 Inproceedings references
     section#inproceedings-references
@@ -80,7 +96,7 @@ block content
                     th Address
                     th
                 each line in references["inproceedings"]
-                    tr
+                    tr.ref-row(data-search="#{line.id} #{line.author} #{line.title} #{line.booktitle} #{line.year} #{line.pages} #{line.publisher} #{line.address}" data-tags="#{reftags[line.id]}")
                         td= line.id
                         td= line.author
                         td: a(href="/ref/#{line.id}") #{line.title}
@@ -90,6 +106,7 @@ block content
                         td= line.publisher
                         td= line.address
                         td: button.btn.inline-btn(onclick='deleteReference("#{line.id}")') Delete
+        p.no-search-results.hidden No references matching search criteria.
 
     h2 Export BibTeX
     section#bibtex-export
